kubernetes/core/envoy-gateway/backend-traffic-policy.yml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: private
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
  compressor:
    - type: Brotli
    - type: Gzip
    - type: Zstd
  connection:
    bufferLimit: 8Mi
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: "0s"
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: public
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
  compressor:
    - type: Brotli
    - type: Gzip
    - type: Zstd
  connection:
    bufferLimit: 100Ki
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: "10s"
  requestBuffer:
    limit: "100Ki"
