kubernetes/core/envoy-gateway/redirect-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none # leaks AAAA in Safari, so I'm disabling this
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: http
    - name: public
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
