kubernetes/core/envoy-gateway/traffic-policies.yml
---
# yaml-language-server: $schema=https://chkpwd.github.io/iac/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compressor:
    - type: Brotli
    - type: Gzip
    - type: Zstd
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  connection:
    bufferLimit: 8Mi
  timeout:
    http:
      requestTimeout: 0s
